web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-escape-sequence-arrow-list/output.txt
[SyntaxError]: keyword can not contain any esc flag. (1,2)
1|(\u0061sync x => { await x })
 |^
